Implemented PS-4709 (Merge MySQL 5.7.24) (docs)
https://jira.percona.com/browse/PS-4709

***
Updated man pages from MySQL Server 5.7.24 source tarball.

***
Updated 'scripts/fill_help_tables.sql' from MySQL Server 5.7.24 source
tarball.

--- a/man/ndb-common-options.1
+++ b/man/ndb-common-options.1
@@ -2,12 +2,12 @@
 .\"     Title: Options Common to NDB Cluster Programs
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 06/07/2018
+.\"      Date: 10/03/2018
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.7
 .\"  Language: English
 .\"
-.TH "OPTIONS COMMON TO NDB CLUSTER PROGRAMS" "1" "06/07/2018" "MySQL 5\&.7" "MySQL Database System"
+.TH "OPTIONS COMMON TO NDB CLUSTER PROGRAMS" "1" "10/03/2018" "MySQL 5\&.7" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -105,7 +105,7 @@ The options in the following table are common to all NDB Cluster executables (ex
 .nr an-no-space-flag 1
 .nr an-break-flag 1
 .br
-.B Table\ \&21.340.\ \&Command\-line options common to all MySQL NDB Cluster programs
+.B Table\ \&21.355.\ \&Command\-line options common to all MySQL NDB Cluster programs
 .TS
 allbox tab(:);
 lB lB lB.
@@ -341,7 +341,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-directory name
+Directory name
 T}
 T{
 \fBDefault Value\fR
@@ -383,7 +383,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-numeric
+Numeric
 T}
 T{
 \fBDefault Value\fR
@@ -446,9 +446,6 @@ l l
 l l
 l l
 l l
-l l
-l l
-l l
 l l.
 T{
 \fBCommand-Line Format\fR
@@ -456,19 +453,9 @@ T}:T{
 --connect-retry-delay=#
 T}
 T{
-\fBType\fR (>= 5.7.10-ndb-7.5.0)
-T}:T{
-numeric
-T}
-T{
 \fBType\fR
 T}:T{
-numeric
-T}
-T{
-\fBDefault Value\fR (>= 5.7.10-ndb-7.5.0)
-T}:T{
-5
+Numeric
 T}
 T{
 \fBDefault Value\fR
@@ -484,11 +471,6 @@ T{
 \fBMinimum Value\fR
 T}:T{
 0
-T}
-T{
-\fBMaximum Value\fR (>= 5.7.10-ndb-7.5.0)
-T}:T{
-4294967295
 T}
 T{
 \fBMaximum Value\fR
@@ -530,7 +512,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -583,7 +565,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -626,7 +608,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -667,7 +649,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -708,7 +690,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -783,7 +765,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -829,7 +811,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -883,7 +865,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -926,7 +908,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-numeric
+Numeric
 T}
 T{
 \fBDefault Value\fR
@@ -969,7 +951,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -1010,7 +992,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -1051,7 +1033,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
