--- a/man/ndb_config.1
+++ b/man/ndb_config.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_config\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 06/07/2018
+.\"      Date: 10/03/2018
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.7
 .\"  Language: English
 .\"
-.TH "\FBNDB_CONFIG\FR" "1" "06/07/2018" "MySQL 5\&.7" "MySQL Database System"
+.TH "\FBNDB_CONFIG\FR" "1" "10/03/2018" "MySQL 5\&.7" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -68,7 +68,7 @@ Options Common to NDB Cluster Programs(1)\&.
 .nr an-no-space-flag 1
 .nr an-break-flag 1
 .br
-.B Table\ \&21.319.\ \&Command\-line options for the ndb_config program
+.B Table\ \&21.334.\ \&Command\-line options for the ndb_config program
 .TS
 allbox tab(:);
 lB lB lB.
@@ -413,7 +413,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-file name
+File name
 T}
 T{
 \fBDefault Value\fR
@@ -457,7 +457,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-numeric
+Numeric
 T}
 T{
 \fBDefault Value\fR
@@ -512,7 +512,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -564,10 +564,6 @@ T}
 l l
 l l
 l l
-l l
-l l
-l l
-l l
 l l.
 T{
 \fBCommand-Line Format\fR
@@ -580,29 +576,9 @@ T}:T{
 5.7.18-ndb-7.6.3
 T}
 T{
-\fBType\fR (>= 5.7.18-ndb-7.6.3)
-T}:T{
-boolean
-T}
-T{
-\fBType\fR (>= 5.7.18-ndb-7.5.7)
-T}:T{
-boolean
-T}
-T{
 \fBType\fR
 T}:T{
-boolean
-T}
-T{
-\fBDefault Value\fR (>= 5.7.18-ndb-7.6.3)
-T}:T{
-FALSE
-T}
-T{
-\fBDefault Value\fR (>= 5.7.18-ndb-7.5.7)
-T}:T{
-FALSE
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -645,7 +621,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -708,7 +684,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -778,7 +754,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -825,7 +801,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -869,7 +845,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-numeric
+Numeric
 T}
 T{
 \fBDefault Value\fR
@@ -912,7 +888,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -967,7 +943,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -1040,12 +1016,12 @@ T}:T{
 5.7.18-ndb-7.5.7
 T}
 T{
-\fBType\fR (>= 5.7.18-ndb-7.4.16,5.7.18-ndb-7.5.7)
+\fBType\fR
 T}:T{
-string
+String
 T}
 T{
-\fBDefault Value\fR (>= 5.7.18-ndb-7.4.16,5.7.18-ndb-7.5.7)
+\fBDefault Value\fR
 T}:T{
 T}
 .TE
@@ -1086,7 +1062,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-string
+String
 T}
 T{
 \fBDefault Value\fR
@@ -1147,7 +1123,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -1201,7 +1177,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-enumeration
+Enumeration
 T}
 T{
 \fBDefault Value\fR
@@ -1325,7 +1301,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -1344,7 +1320,7 @@ to provide output as XML by adding this option\&. A portion of such output is sh
 .\}
 .nf
 shell> \fBndb_config \-\-configinfo \-\-xml\fR
-<configvariables protocolversion="1" ndbversionstring="5\&.7\&.23\-ndb\-7\&.5\&.11"
+<configvariables protocolversion="1" ndbversionstring="5\&.7\&.24\-ndb\-7\&.5\&.13"
                     ndbversion="460032" ndbversionmajor="7" ndbversionminor="5"
                     ndbversionbuild="0">
   <section name="SYSTEM">
