--- a/man/ndb_error_reporter.1
+++ b/man/ndb_error_reporter.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_error_reporter\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 06/07/2018
+.\"      Date: 10/03/2018
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.7
 .\"  Language: English
 .\"
-.TH "\FBNDB_ERROR_REPORTER\FR" "1" "06/07/2018" "MySQL 5\&.7" "MySQL Database System"
+.TH "\FBNDB_ERROR_REPORTER\FR" "1" "10/03/2018" "MySQL 5\&.7" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -47,7 +47,7 @@ Options Common to NDB Cluster Programs(1)\&.
 .nr an-no-space-flag 1
 .nr an-break-flag 1
 .br
-.B Table\ \&21.324.\ \&Command\-line options for the ndb_error_reporter program
+.B Table\ \&21.339.\ \&Command\-line options for the ndb_error_reporter program
 .TS
 allbox tab(:);
 lB lB lB.
@@ -154,7 +154,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-integer
+Integer
 T}
 T{
 \fBDefault Value\fR
@@ -195,7 +195,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -238,7 +238,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-boolean
+Boolean
 T}
 T{
 \fBDefault Value\fR
@@ -283,7 +283,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-integer
+Integer
 T}
 T{
 \fBDefault Value\fR
