--- a/man/ndb_mgm.1
+++ b/man/ndb_mgm.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_mgm\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 06/07/2018
+.\"      Date: 10/03/2018
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.7
 .\"  Language: English
 .\"
-.TH "\FBNDB_MGM\FR" "1" "06/07/2018" "MySQL 5\&.7" "MySQL Database System"
+.TH "\FBNDB_MGM\FR" "1" "10/03/2018" "MySQL 5\&.7" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -76,7 +76,7 @@ Options Common to NDB Cluster Programs(1)\&.
 .nr an-no-space-flag 1
 .nr an-break-flag 1
 .br
-.B Table\ \&21.317.\ \&Command\-line options for the ndb_mgm program
+.B Table\ \&21.332.\ \&Command\-line options for the ndb_mgm program
 .TS
 allbox tab(:);
 lB lB lB.
@@ -147,7 +147,7 @@ T}
 T{
 \fBType\fR
 T}:T{
-numeric
+Numeric
 T}
 T{
 \fBDefault Value\fR
@@ -273,8 +273,6 @@ l l
 l l
 l l
 l l
-l l
-l l
 l l.
 T{
 \fBCommand-Line Format\fR
@@ -289,12 +287,12 @@ T}
 T{
 \fBType\fR (>= 5.7.10-ndb-7.5.0)
 T}:T{
-numeric
+Numeric
 T}
 T{
 \fBType\fR
 T}:T{
-integer
+Integer
 T}
 T{
 \fBDefault Value\fR (>= 5.7.10-ndb-7.5.0)
@@ -307,19 +305,9 @@ T}:T{
 3
 T}
 T{
-\fBMinimum Value\fR (>= 5.7.10-ndb-7.5.0)
-T}:T{
-0
-T}
-T{
 \fBMinimum Value\fR
 T}:T{
 0
-T}
-T{
-\fBMaximum Value\fR (>= 5.7.10-ndb-7.5.0)
-T}:T{
-4294967295
 T}
 T{
 \fBMaximum Value\fR
